[gd_scene load_steps=23 format=2]

[ext_resource path="res://Statistiche/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Statistiche/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Statistiche/EnemiesStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Statistiche/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Secondarie/Sprites/Personaggi/Patatine.png" type="Texture" id=5]
[ext_resource path="res://Cibo/Patatine.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 12.5 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "Death",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 3.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 5.0
height = 16.0

[sub_resource type="CircleShape2D" id=16]
radius = 66.2722

[node name="Patatine" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 13 )
animation = "Walk"
playing = true

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 2
collision_mask = 2

[node name="HurtboxShape" parent="Hurtbox" index="0"]
position = Vector2( -1, 3 )
shape = SubResource( 14 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -1, 5 )
shape = SubResource( 15 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 8

[node name="AreaDetect" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 16 )

[node name="EnemiesStats" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
